tests/ui/snapshots/ui__test_dialog__confirm_dialog_basic.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"     ┌ Confirm ───────────────────────────────────────┐     "
"     │                                                │     "
"     │             Delete bookmark 'main'?            │     "
"     │                                                │     "
"     │                [Y]es       [N]o                │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
