tests/ui/snapshots/ui__test_dialog__confirm_dialog_with_detail.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"     ┌ Warning ───────────────────────────────────────┐     "
"     │                                                │     "
"     │              Force push to remote?             │     "
"     │                                                │     "
"     │       This will overwrite remote history.      │     "
"     │                                                │     "
"     │                [Y]es       [N]o                │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
