tests/ui/snapshots/ui__test_dialog__confirm_dialog_wraps_cjk_message.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"     ┌ 確認 ──────────────────────────────────────────┐     " Hidden by multi-width symbols: [(8, " "), (10, " ")]
"     │                                                │     "
"     │ この操作は別のワークスペースで実行されました。 │     " Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " ")]
"     │                元に戻しますか？                │     " Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"     │                                                │     "
"     │                [Y]es       [N]o                │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
