tests/ui/snapshots/ui__test_dialog__confirm_dialog_wraps_long_detail.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"     ┌ Cross-workspace undo ──────────────────────────┐     "
"     │                                                │     "
"     │       Undo another workspace's operation?      │     "
"     │                                                │     "
"     │       Error: Refusing to undo operation        │     "
"     │    52f6769185b7 because it was performed in    │     "
"     │                workspace second                │     "
"     │  Hint: Use `--allow-cross-workspace` to undo   │     "
"     │  it anyway, or use `jj op revert` to revert a  │     "
"     │               specific operation               │     "
"     │                                                │     "
"     │                [Y]es       [N]o                │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
