tests/ui/snapshots/ui__test_dialog__select_dialog_empty.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"                                                            "
"     ┌ Select Bookmarks ──────────────────────────────┐     "
"     │                                                │     "
"     │Choose bookmarks to delete:                     │     "
"     │                                                │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
