tests/ui/snapshots/ui__test_dialog__select_dialog_with_items.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"     ┌ Delete Bookmarks ──────────────────────────────┐     "
"     │                                                │     "
"     │Select bookmarks to delete:                     │     "
"     │                                                │     "
"     │> [ ] main                                      │     "
"     │  [x] feature/auth                              │     "
"     │  [ ] bugfix/login                              │     "
"     │                                                │     "
"     │Warning: This cannot be undone.                 │     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
