tests/ui/snapshots/ui__test_dialog__select_single_dialog.snap
---
source: tests/ui/test_dialog.rs
expression: terminal.backend()
---
"                                                  "
"                                                  "
"  ┌ Jump to Bookmark ──────────────────────────┐  "
"  │                                            │  "
"  │Select bookmark:                            │  "
"  │                                            │  "
"  │> feature/auth                              │  "
"  │  main                                      │  "
"  │  develop                                   │  "
"  │                                            │  "
"  └────────────────────────────────────────────┘  "
"                                                  "
"                                                  "
"                                                  "
